fix(menus):menus overflow 时留白问题 (#115)

--- a/src/components/menus/_menu.scss
+++ b/src/components/menus/_menu.scss
@@ -28,10 +28,10 @@ $font: MicrosoftYaHei;
 
 //菜单展开时
 .menu-container {
-  position: relative;
   width: $left-width;
   height: 100%;
   background: #E9EBEE;
+  overflow-y: auto;
   & .expand {
     height: 20px;
     position: relative;
